Report last fix

--- a/Relazione/Relazione_MSA.tex
+++ b/Relazione/Relazione_MSA.tex
@@ -88,8 +88,7 @@
 
 \section{Introduzione}
 
-Il connettore \textit{Publish-Subscribe} presenta caratteristiche interessanti per sistemi caratterizzati da una elevata dinamicit\'a, grazie all'elevato livello di disaccoppiamento che \'e in grado di garantire tra componenti. I componenti coinvolti nell'interazione, per mezzo del connettore, sono i \textit{produttori} e i \textit{consumatori} di determinati eventi generabili. Un evento \'e caratterizzato dal cosidetto \textit{topic} che rappresenta il suo argomento d'appartenenza al quale un \textit{consumatore} pu\'o sottoscriversi se interessato a tale classe di informazioni; il \textit{produttore} a sua volta pu\'o pubblicare eventi associati ad un determinato \textit{topic}. Nello specifico \'e possibile caratterizzare un determinato evento (dopo averlo associato ad un \textit{topic}) in base al suo contenuto utilizzando la politica del tipo \textit{content-based}. Tale modalit\'a di sottoscrizione viene realizzata specificando un filtro e di conseguenza favorisce la riduzione del carico di eventi recapitati ai \textit{consumatori}. Il connettore realizzato si presta all'utilizzo in ambiente mobile in quanto assicura un alto grado di disaccoppiamento, continuando a garantire uno scambio affidabile di messaggi tra le entit\'a coinvolte. Tuttavia ci siamo posti come obiettivo quello di aggiungere a tale sistema politiche adattative che tengano conto delle limitate risorse energetiche e computazionali a disposizione dei nodi mobili, continuando a garantire uno scambio affidabile di messaggi tra le entit\'a attraverso il connettore.
-Intuendo un relazione funzionale tra consumo energetico e traffico generato dal nodo mobile, abbiamo compiuto uno studio statistico per avallare la nostra ipotesi che si \'e rivelato soddisfacente: pertanto abbiamo potuto realizzare un modello matematico finale. 
+Il connettore \textit{Publish-Subscribe} presenta caratteristiche interessanti per sistemi caratterizzati da una elevata dinamicit\'a, grazie all'elevato livello di disaccoppiamento che \'e in grado di garantire tra componenti. I componenti coinvolti nell'interazione, per mezzo del connettore, sono i \textit{produttori} e i \textit{consumatori} di determinati eventi generabili. Un evento \'e caratterizzato dal cosidetto \textit{topic} che rappresenta il suo argomento d'appartenenza al quale un \textit{consumatore} pu\'o sottoscriversi se interessato a tale classe di informazioni; il \textit{produttore} a sua volta pu\'o pubblicare eventi associati ad un determinato \textit{topic}. Nello specifico \'e possibile caratterizzare un determinato evento (dopo averlo associato ad un \textit{topic}) in base al suo contenuto utilizzando la politica del tipo \textit{content-based}. Tale modalit\'a di sottoscrizione viene realizzata specificando un filtro e di conseguenza favorisce la riduzione del carico di eventi recapitati ai \textit{consumatori}. Il connettore realizzato si presta all'utilizzo in ambiente mobile in quanto assicura un alto grado di disaccoppiamento, continuando a garantire uno scambio affidabile di messaggi tra le entit\'a coinvolte. Tuttavia ci siamo posti come obiettivo quello di aggiungere a tale sistema politiche adattative che tengano conto delle limitate risorse energetiche e computazionali a disposizione dei nodi mobili, continuando a garantire uno scambio affidabile di messaggi tra le entit\'a attraverso il connettore. Intuendo una relazione funzionale tra consumo energetico e traffico generato dal nodo mobile, abbiamo compiuto uno studio statistico per avallare la nostra ipotesi che si \'e rivelato soddisfacente: pertanto abbiamo potuto realizzare un modello matematico finale. 
 La nostra politica adattativa ci permette di controllare il tasso di consumo energetico controllando direttamente la frequenza di interazione del nodo mobile con la rete, gestendo, tramite un monitoraggio continuo dello stato della batteria, le risorse limitate del dispositivo. % scrivere in una frase che il nostro sistema implementa mape?
 
 \section{Obiettivi}
@@ -401,7 +400,7 @@ Il modello matematico viene realizzato seguendo tre fasi:
 
 \subsection{Test e risultati}
 
-Per effettuare le misurazioni della grandezza in esame, \'e stato utilizzato il \textit{tool Battery-Historian}\footnote{Per maggiori dettagli vedere \textit{Battery-Historian} nella bibliografia} che permette l'analisi e la visualizzazione del consumo energetico generato da tutte le applicazioni eseguite durante il test, definendo i consumi dettati dall'utilizzo del display e della rete da parte da tali applicazioni.
+Per effettuare le misurazioni della grandezza in esame, \'e stato utilizzato il \textit{tool Battery-Historian}\footnote{Per maggiori dettagli vedere \textit{Battery-Historian} nella bibliografia} che permette l'analisi e la visualizzazione del consumo energetico generato da tutte le applicazioni eseguite durante il test, definendo i consumi dettati dall'utilizzo del display e della rete da parte di tali applicazioni.
 \\\\
 I test sono stati condotti su un tablet \textit{Samsung Galaxy Tab S2} con amperaggio della batteria di \textit{5870 Mah}. \'E da sottolineare che tale dispositivo \'e relativamente nuovo e pertanto la salute della batteria non \'e compromessa. Tutto ci\'o garantisce dei test significativi.
 \\
@@ -472,7 +471,7 @@ Questo risultato \'e molto importante poich\'e dimostra che la \textit{frequenza
 
 Alla luce di quanto dimostrato attraverso i test condotti su un ambiente controllato ed utilizzando strumenti matematici appropriati, \'e possibile affermare che la politica adattativa implementata \'e adeguata ad un contesto \textit{mobile} poich\'e garantisce l'accesso affidabile alle risorse e allo stesso tempo limita al meglio la velocit\'a di scarica della batteria. 
 \\
-Inoltre il sistema proposto garantisce tutti i tipi di disaccoppiamento (\textit{spaziale, temporale e di sincronia}) che sono propri di un connettore \textit{Publish-Subscribe}, permettendo all'utente di poter ricevere aggiornamenti continui sui \textit{Topic} di interesse senza inficiare eccessivamente le risorse (limitate) a disposizione del dispositivo. Tale risultato \'e stato possibile soprattutto per merito del sistema a code di messaggi \textit{AWS SQS}, che permette di disaccoppiare completamente i componenti dell'architettura. 
+Inoltre il sistema proposto garantisce tutti i tipi di disaccoppiamento (\textit{spaziale, temporale e di sincronia}) che sono propri di un connettore \textit{Publish-Subscribe}, permettendo all'utente di poter ricevere aggiornamenti continui sui \textit{Topic} di interesse senza incidere eccessivamente sulle risorse (limitate) a disposizione del dispositivo. Tale risultato \'e stato possibile soprattutto per merito del sistema a code di messaggi \textit{AWS SQS}, che permette di disaccoppiare completamente i componenti dell'architettura. 
 
 \section{Sviluppi futuri}
 
@@ -486,7 +485,7 @@ Un'ulteriore politica adattativa potrebbe riguardare il controllo del traffico d
 
 \begin{itemize}
 \item{Evitare di effettuare l'operazione di \textit{pull} se la coda contiene una quantit\'a esigua di messaggi, limitando il traffico in ingresso;}
-\item{Raggruppare i messaggi in uscita in un unico blocco prima di effettuare un operazione di \textit{push}, limitando il traffico in uscita.} 
+\item{Raggruppare i messaggi in uscita in un unico blocco prima di effettuare un'operazione di \textit{push}, limitando il traffico in uscita.} 
 \end{itemize}
 
 % Da ricordare : appendice strumenti matematici
